# underwaterAutonomousRobot

./: .gitignore  README.md  compositeSimulationInstructions.md  notesForRos2MotorctrlTest.md  ros2Notes.md  topics.txt
UAR/: UAR.ino  motorControl.ino  motorControl.py  motorTest.py
UAR/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
UAR/log/: latest_build
background material/: modem.md  test_ctd.py  test_gnss.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/my_robot_package/lib/my_robot_package/: ctd.py  dvl.py  float_simulator.py  gnss.py
install/my_robot_package/share/ament_index/resource_index/package_run_dependencies/: my_robot_package
install/my_robot_package/share/ament_index/resource_index/parent_prefix_path/: my_robot_package
install/my_robot_package/share/my_robot_package/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_robot_package/share/my_robot_package/cmake/: my_robot_packageConfig-version.cmake  my_robot_packageConfig.cmake
install/my_robot_package/share/my_robot_package/environment/: ament_prefix_path.dsv  path.dsv
install/my_robot_package/share/my_robot_package/launch/: robot_launch.py
install/my_robot_package/share/my_robot_package/urdf/: float.urdf
log/: latest_build
ros2_ws/: TestUAV.perspective  UAVworking.perspective
ros2_ws/mission_data/: metadata.yaml  parse2csv.py
ros2_ws/mission_data/mission_data_csv_export/: altitude.csv  conductivity.csv  drone_depth.csv  events_write_split.csv  gps_data.csv  pressure.csv  seafloor_depth.csv  sim_dvl_raw_altitude.csv  sim_dvl_raw_vx.csv  sim_dvl_raw_vy.csv  sim_dvl_raw_vz.csv  sim_ground_truth_altitude.csv  sim_ground_truth_depth.csv  sim_ground_truth_seafloor_z.csv  sim_pressure_raw.csv  target_depth.csv  temperature.csv  tf.csv  tf_static.csv  vx.csv  vy.csv  vz.csv
ros2_ws/src/my_robot_package/: CMakeLists.txt  package.xml
ros2_ws/src/my_robot_package/launch/: robot_launch.py
ros2_ws/src/my_robot_package/src/: ctd.py  depth_calculator.py  dvl.py  float_simulator.py  gnss.py  init_neutral_buoyancy.py  mission_control_node.py  motorControl.py
ros2_ws/src/my_robot_package/srv/: SetMission.srv
ros2_ws/src/my_robot_package/test/: test_launch.py
ros2_ws/src/my_robot_package/urdf/: float.urdf
waveshare/SIM7600G-H-4G-HAT-B-Demo/Raspberry/c/AT/: AT.cpp  Makefile
waveshare/SIM7600G-H-4G-HAT-B-Demo/Raspberry/c/FTP/: FTP.cpp  Makefile
waveshare/SIM7600G-H-4G-HAT-B-Demo/Raspberry/c/GPS/: GPS.cpp  Makefile
waveshare/SIM7600G-H-4G-HAT-B-Demo/Raspberry/c/PhoneCall/: Makefile  PhoneCall.cpp
waveshare/SIM7600G-H-4G-HAT-B-Demo/Raspberry/c/SMS/: Makefile  SMS.cpp
waveshare/SIM7600G-H-4G-HAT-B-Demo/Raspberry/c/TCP/: Makefile  TCP.cpp
waveshare/SIM7600G-H-4G-HAT-B-Demo/Raspberry/python/AT/: AT.py
waveshare/SIM7600G-H-4G-HAT-B-Demo/Raspberry/python/FTP/: FTP.py
waveshare/SIM7600G-H-4G-HAT-B-Demo/Raspberry/python/GPS/: GPSTest2.py
waveshare/SIM7600G-H-4G-HAT-B-Demo/Raspberry/python/PhoneCall/: Phonecall.py
waveshare/SIM7600G-H-4G-HAT-B-Demo/Raspberry/python/SMS/: SMS.py
waveshare/SIM7600G-H-4G-HAT-B-Demo/Raspberry/python/TCP/: TCP.py
