<package format="2">
  <name>my_robot_package</name>
  <version>0.0.1</version>
  <description>My robot package</description>
  <maintainer email="eelis.pinomaa@aalto.fi">Eelis Pinomaa</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
</package>